# dgcount

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  count.rs  library.rs  main.rs
