[package]
name = "dgcount"
version = "0.1.1"
edition = "2024"
authors = ["Noam Teyssier"]
description = "Dual guide CRISPR counter"
license = "MIT"
repository = "https://github.com/noamteyssier/dgcount"
keywords = ["CRISPR", "dual", "guide", "sgRNA", "counter"]
categories = ["command-line-utilities", "science::bioinformatics"]

[dependencies]
anyhow = "1.0.98"
binseq = "0.6.3"
clap = { version = "4.5.38", features = ["derive"] }
csv = "1.3.1"
disambiseq = "0.2.2"
num_cpus = "1.16.0"
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive"] }
